--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.4",
     "expo": "~51.0.31",
     "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
