--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.11",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
