--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "expo-image-picker": "~15.0.7"
+    "expo-image-picker": "~15.0.7",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
