--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.31",
+    "expo-clipboard": "~6.0.3",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
@@ -30,9 +33,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-clipboard": "~6.0.3"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
